# fortunes-fr

./: AUTHORS  CHANGES  COPYING  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  configure  configure.in
data/: Makefile.am  Makefile.in
data/GDP/: Makefile.in  debian-french
data/bd/: Makefile.in  asterix  calvin_et_hobbes  leonard  philippe_geluck  shadok  spirou
data/cinema/: Makefile.am  Makefile.in  bruce_willis  eddie_murphy  edgar_bergen  francis_blanche  francois_truffaut  gerard_depardieu  gerard_jugnot  groucho_marx  henry_jeanson  jay_leno  jean-claude_vandamme  jean_gabin  louis_de_funes  marilyn_monroe  michel_audiard  michel_blanc  orson_welles  rene_bergeron  robert_hossein  sacha_guitry  shirley_temple  starwars  steven_wright  sylvie_testud  woody_allen
data/droit/: Makefile.in  ddhc
data/fr.rec.photo/: Makefile.in  frp
data/haiku/: Makefile.in  anonyme  buson  chiyo-jo  chodo  gonzui  issa  kikusha-ni  onitsura  shiko  sokan  teitoku  yagu  yasui  yorie
data/humoristes/: Makefile.in  alphonse_allais  coluche  francois_pirette  les_nuls  patrick_timsit  pierre_dac  pierre_desproges  pierre_doris  raymond_devos  sim
data/humour/: Makefile.in  blagues  devinettes  edgar_faure  perles
data/informatique/: Makefile.in  divers  fai  ibm  linus_torvalds  linux  microsoft
data/litterature_etrangere/: Makefile.in  ambrose_bierce  arthur_c_clarke  arthur_koestler  bernard_shaw  bodie_thoene  cesare_pavese  charles_caleb_colton  comtesse_de_blessington  daniel_boorstin  douglas_adams  feodor_dostoevski  fernando_de_rojas  franck_herbert  gabriele_d_annunzio  georges_farquhar  georges_orwell  goethe  harry_laus  heinrich_heine  isaac_asimov  jean-paul_richter  john_dryden  john_graunt  john_steinbeck  john_vanbrugh  jonathan_swift  joseph_conrad  julio_cortazar  lucrece  mark_twain  maximos_planude  mikhail_saltykov-chtchedrine  milan_kundera  oscar_wilde  philip_kindred_dick  publiluis_syrus  ralph_waldo_emerson  robert_lee_frost  rudyard_kipling  (+11 more)
data/litterature_francaise/: Makefile.in  alain  albert_camus  albert_londres  albert_memmi  alexandre_dumas  alexandre_dumas_fils  alfred_capus  alfred_d_houdetot  alfred_de_musset  alfred_jarry  alfred_korzybski  alphonse_de_lamartine  alphonse_karr  amelie_nothomb  anatole_france  andre_dhotel  andre_gide  andre_malraux  antoine_de_saint_exupery  armand_salacrois  arthur_adamov  arthur_cravan  arthur_rimbaud  auguste_comte  beaumarchais  bernard_grasset  bernard_werber  blaise_pascal  boris_vian  charles_perrault  claris_de_florian  colette  crebillon  daniel_de_foe  daniel_pennac  denis_diderot  edmond_rostand  edouard_bourdet  elisette_abecassis  (+101 more)
data/mysoginie/: Makefile.in  albert_willemetz  anatole_france  charles_baudelaire  claude-hadrien_helvetius  frederic_dard  georges_courteline  henri_beraud  herbert_spencer  james_joyce  jean_anouilh  jean_cocteau  jules_verne  leon_blum  maurice_donnay  mirabeau  paul-jean_toulet  vicomte_d_arlincourt  voltaire
data/personnalites/: Makefile.in  alain_chabat  daniel_balavoine  dominique_farrugia  doug_larson  georges_brassens  henri_salvador  henry_cartier-bresson  henry_ford  jacques-henri_lartigue  john_lennon  leo_ferre  olivier_de_kersauson  pierre_peret  salvador_dali  serge_gainsbourg
data/philosophie/: Makefile.in  alexandre_soljenitsyne  alfred_north_whitehead  anaxagore  andrew_mason  antiphane  aristote  arthur_schopenhauer  benjamin_franklin  bernard_de_fontenelle  bias  charles-maurice_de_talleyrand  condorcet  confucius  davide_hume  democrite  dominique_lecourt  donald_davidson  duc_de_levis  edouard_claparede  edouard_herriot  emmanuel_kant  ernest_renan  friedrich_nietzsche  georg_wilhelm_friedrich_hegel  henri_bergson  henri_michaux  henry_more  henry_sidgwick  jean_rostand  john_locke  joseph_goebbles  julien_la_mettrie  karl_marx  karl_popper  ludwig_boltzmann  ludwig_von_wittgenstein  marechal_foch  marquis_de_condorcet  mirabeau  (+25 more)
data/politique/: Makefile.in  abraham_lincoln  adolphe_thiers  albert_einstein  andre_lajoinie  charles-maurice_de_talleyrand  charles_de_gaulle  ciceron  francois_mitterand  georges_clemenceau  georges_danton  georges_marchais  harold_wilson  jacques_chirac  jacques_toubon  jean-baptiste_colbert  john_fitzgerald_kennedy  louis_16  louis_aragon  marechal_foch  margaret_thatcher  napoleon_bonaparte  paul_raynaud  richelieu  ronald_reagan  santini  silone  sully  winston_churchill
data/proverbes/: Makefile.in  africains  allemands  anglais  arabes  boudhiste  chinois  corses  dictons  espagnols  estoniens  indiens  italiens  persans  polonais  russes  sicilien  taotiens
data/religion/: Makefile.in  abou_al_ala_al-ma_arri  alain  ambrose_bierce  antonin_artaud  aristote  arthur_schopenhauer  auguste_blanqui  bertrand_russel  bible  boris_vian  chamfort  charles_sainte_beuve  claude-hadrien_helvetius  coran  denis_diderot  emil_michel_cioran  emile_zola  francois_cavanna  georg_christoph_lichtenberg  georges_bernanos  gustave_flaubert  jean_de_la_bruyere  jean_ferrat  jean_khalfa  jean_paul_2  kamal_jumblatt  karl_marx  leon_xiii  louis_scutenaire  marcel_havrenne  marquis_de_sade  matzneff_gabriel  maurice_sachs  melchior_grimm  michel_bakounine  montaigne  montesquieu  paul_d_holbach  paul_morand  (+10 more)
data/sciences/: Makefile.in  adrien_legendre  albert_einstein  andre_weil  anko_jansen  antoine-laurent_lavoisier  arthur_c_clarke  (+88 more)
doc/: 16eme_siecle.txt  Makefile.am  Makefile.in  moyen_age.txt
